# rust-spider

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/aspect/: logging.rs  mod.rs
src/auth/: login.rs  mod.rs
src/config/: mod.rs
src/fetcher/: client.rs  mod.rs
src/parser/: html_parser.rs  mod.rs
src/utils/: cli.rs  logging.rs  mod.rs
src/worker/: crawler.rs  mod.rs  task.rs  worker.rs
src/writer/: markdown_writer.rs  mod.rs
