[package]
name = "spider"
version = "0.1.0"
edition = "2021"
authors = ["Gao Yuan <yuan.gao@13un.com>"]
description = "A simple command line web spider with task management capabilities"
license = "Apache2.0"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }  # 序列化和反序列化库
serde_json = "1.0"  # JSON序列化和反序列化库
chrono = "0.4"  # 日期和时间处理库
reqwest = { version = "0.11", features = ["blocking", "socks"] }
select = "0.5"
toml = "0.5"
num_cpus = "1.13"
crossbeam = "0.8"
prettytable = "0.10"
indicatif = "0.17"
scraper = "0.13"
regex = "1"
readability = "0.3"
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"
ctrlc = "3.2.0"